--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.1",
     "resend": "^6.5.1",
     "tailwind-merge": "^3.4.0",
